Compiladores/etapa4/y.output
   0  $accept : program $end

   1  program : block
   2          | listDeclarations

   3  listCmd : cmd
   4          | cmd ';' listCmd

   5  listDeclarations : var listDeclarations
   6                   | function listDeclarations
   7                   |

   8  var : KW_CARA TK_IDENTIFIER '=' expr ';'
   9      | KW_INTE TK_IDENTIFIER '=' expr ';'
  10      | KW_REAL TK_IDENTIFIER '=' expr ';'
  11      | KW_INTE TK_IDENTIFIER '[' index ']' array ';'
  12      | KW_CARA TK_IDENTIFIER '[' index ']' array ';'
  13      | KW_REAL TK_IDENTIFIER '[' index ']' array ';'

  14  function : KW_CARA TK_IDENTIFIER '(' arrayParams ')' block
  15           | KW_INTE TK_IDENTIFIER '(' arrayParams ')' block
  16           | KW_REAL TK_IDENTIFIER '(' arrayParams ')' block

  17  cmd : TK_IDENTIFIER '=' expr
  18      | TK_IDENTIFIER '[' expr ']' '=' expr
  19      | cmd KW_ENQUANTO '(' expr ')'
  20      | KW_ENTAUM cmd KW_SE '(' expr ')'
  21      | KW_ENTAUM cmd KW_SENAUM cmd KW_SE '(' expr ')'
  22      | KW_ESCREVA arrayPrint
  23      | KW_RETORNE expr
  24      | block
  25      |

  26  expr : TK_IDENTIFIER
  27       | TK_IDENTIFIER '[' expr ']'
  28       | TK_IDENTIFIER '(' array ')'
  29       | LIT_CHAR
  30       | LIT_INTEIRO
  31       | LIT_FLOAT
  32       | expr '+' expr
  33       | expr '-' expr
  34       | expr '*' expr
  35       | expr '/' expr
  36       | expr '<' expr
  37       | expr '>' expr
  38       | expr OPERATOR_EQ expr
  39       | expr OPERATOR_DIF expr
  40       | expr OPERATOR_GE expr
  41       | expr OPERATOR_LE expr
  42       | expr '&' expr
  43       | expr '|' expr
  44       | expr '~' expr
  45       | '(' expr ')'
  46       | KW_ENTRADA

  47  index : LIT_INTEIRO
  48        | TK_IDENTIFIER

  49  array : expr array
  50        |

  51  param : KW_CARA TK_IDENTIFIER
  52        | KW_INTE TK_IDENTIFIER
  53        | KW_REAL TK_IDENTIFIER

  54  arrayParams : param arrayParams
  55              |

  56  arrayPrint : LIT_STRING arrayPrint
  57             | expr arrayPrint
  58             |

  59  block : '{' listCmd '}'

state 0
	$accept : . program $end  (0)
	listDeclarations : .  (7)

	KW_CARA  shift 1
	KW_INTE  shift 2
	KW_REAL  shift 3
	'{'  shift 4
	$end  reduce 7

	program  goto 5
	block  goto 6
	listDeclarations  goto 7
	var  goto 8
	function  goto 9


state 1
	var : KW_CARA . TK_IDENTIFIER '=' expr ';'  (8)
	var : KW_CARA . TK_IDENTIFIER '[' index ']' array ';'  (12)
	function : KW_CARA . TK_IDENTIFIER '(' arrayParams ')' block  (14)

	TK_IDENTIFIER  shift 10
	.  error


state 2
	var : KW_INTE . TK_IDENTIFIER '=' expr ';'  (9)
	var : KW_INTE . TK_IDENTIFIER '[' index ']' array ';'  (11)
	function : KW_INTE . TK_IDENTIFIER '(' arrayParams ')' block  (15)

	TK_IDENTIFIER  shift 11
	.  error


state 3
	var : KW_REAL . TK_IDENTIFIER '=' expr ';'  (10)
	var : KW_REAL . TK_IDENTIFIER '[' index ']' array ';'  (13)
	function : KW_REAL . TK_IDENTIFIER '(' arrayParams ')' block  (16)

	TK_IDENTIFIER  shift 12
	.  error


state 4
	block : '{' . listCmd '}'  (59)
	cmd : .  (25)

	KW_ENTAUM  shift 13
	KW_ESCREVA  shift 14
	KW_RETORNE  shift 15
	TK_IDENTIFIER  shift 16
	'{'  shift 4
	KW_ENQUANTO  reduce 25
	';'  reduce 25
	'}'  reduce 25

	block  goto 17
	listCmd  goto 18
	cmd  goto 19


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : block .  (1)

	.  reduce 1


state 7
	program : listDeclarations .  (2)

	.  reduce 2


state 8
	listDeclarations : var . listDeclarations  (5)
	listDeclarations : .  (7)

	KW_CARA  shift 1
	KW_INTE  shift 2
	KW_REAL  shift 3
	$end  reduce 7

	listDeclarations  goto 20
	var  goto 8
	function  goto 9


state 9
	listDeclarations : function . listDeclarations  (6)
	listDeclarations : .  (7)

	KW_CARA  shift 1
	KW_INTE  shift 2
	KW_REAL  shift 3
	$end  reduce 7

	listDeclarations  goto 21
	var  goto 8
	function  goto 9


state 10
	var : KW_CARA TK_IDENTIFIER . '=' expr ';'  (8)
	var : KW_CARA TK_IDENTIFIER . '[' index ']' array ';'  (12)
	function : KW_CARA TK_IDENTIFIER . '(' arrayParams ')' block  (14)

	'('  shift 22
	'='  shift 23
	'['  shift 24
	.  error


state 11
	var : KW_INTE TK_IDENTIFIER . '=' expr ';'  (9)
	var : KW_INTE TK_IDENTIFIER . '[' index ']' array ';'  (11)
	function : KW_INTE TK_IDENTIFIER . '(' arrayParams ')' block  (15)

	'('  shift 25
	'='  shift 26
	'['  shift 27
	.  error


state 12
	var : KW_REAL TK_IDENTIFIER . '=' expr ';'  (10)
	var : KW_REAL TK_IDENTIFIER . '[' index ']' array ';'  (13)
	function : KW_REAL TK_IDENTIFIER . '(' arrayParams ')' block  (16)

	'('  shift 28
	'='  shift 29
	'['  shift 30
	.  error


state 13
	cmd : KW_ENTAUM . cmd KW_SE '(' expr ')'  (20)
	cmd : KW_ENTAUM . cmd KW_SENAUM cmd KW_SE '(' expr ')'  (21)
	cmd : .  (25)

	KW_ENTAUM  shift 13
	KW_ESCREVA  shift 14
	KW_RETORNE  shift 15
	TK_IDENTIFIER  shift 16
	'{'  shift 4
	KW_SE  reduce 25
	KW_SENAUM  reduce 25
	KW_ENQUANTO  reduce 25

	block  goto 17
	cmd  goto 31


state 14
	cmd : KW_ESCREVA . arrayPrint  (22)
	arrayPrint : .  (58)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	LIT_STRING  shift 37
	'('  shift 38
	KW_SE  reduce 58
	KW_SENAUM  reduce 58
	KW_ENQUANTO  reduce 58
	';'  reduce 58
	'}'  reduce 58

	expr  goto 39
	arrayPrint  goto 40


state 15
	cmd : KW_RETORNE . expr  (23)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 41


state 16
	cmd : TK_IDENTIFIER . '=' expr  (17)
	cmd : TK_IDENTIFIER . '[' expr ']' '=' expr  (18)

	'='  shift 42
	'['  shift 43
	.  error


state 17
	cmd : block .  (24)

	.  reduce 24


state 18
	block : '{' listCmd . '}'  (59)

	'}'  shift 44
	.  error


state 19
	listCmd : cmd .  (3)
	listCmd : cmd . ';' listCmd  (4)
	cmd : cmd . KW_ENQUANTO '(' expr ')'  (19)

	KW_ENQUANTO  shift 45
	';'  shift 46
	'}'  reduce 3


state 20
	listDeclarations : var listDeclarations .  (5)

	.  reduce 5


state 21
	listDeclarations : function listDeclarations .  (6)

	.  reduce 6


state 22
	function : KW_CARA TK_IDENTIFIER '(' . arrayParams ')' block  (14)
	arrayParams : .  (55)

	KW_CARA  shift 47
	KW_INTE  shift 48
	KW_REAL  shift 49
	')'  reduce 55

	arrayParams  goto 50
	param  goto 51


state 23
	var : KW_CARA TK_IDENTIFIER '=' . expr ';'  (8)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 52


state 24
	var : KW_CARA TK_IDENTIFIER '[' . index ']' array ';'  (12)

	TK_IDENTIFIER  shift 53
	LIT_INTEIRO  shift 54
	.  error

	index  goto 55


state 25
	function : KW_INTE TK_IDENTIFIER '(' . arrayParams ')' block  (15)
	arrayParams : .  (55)

	KW_CARA  shift 47
	KW_INTE  shift 48
	KW_REAL  shift 49
	')'  reduce 55

	arrayParams  goto 56
	param  goto 51


state 26
	var : KW_INTE TK_IDENTIFIER '=' . expr ';'  (9)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 57


state 27
	var : KW_INTE TK_IDENTIFIER '[' . index ']' array ';'  (11)

	TK_IDENTIFIER  shift 53
	LIT_INTEIRO  shift 54
	.  error

	index  goto 58


state 28
	function : KW_REAL TK_IDENTIFIER '(' . arrayParams ')' block  (16)
	arrayParams : .  (55)

	KW_CARA  shift 47
	KW_INTE  shift 48
	KW_REAL  shift 49
	')'  reduce 55

	arrayParams  goto 59
	param  goto 51


state 29
	var : KW_REAL TK_IDENTIFIER '=' . expr ';'  (10)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 60


state 30
	var : KW_REAL TK_IDENTIFIER '[' . index ']' array ';'  (13)

	TK_IDENTIFIER  shift 53
	LIT_INTEIRO  shift 54
	.  error

	index  goto 61


state 31
	cmd : cmd . KW_ENQUANTO '(' expr ')'  (19)
	cmd : KW_ENTAUM cmd . KW_SE '(' expr ')'  (20)
	cmd : KW_ENTAUM cmd . KW_SENAUM cmd KW_SE '(' expr ')'  (21)

	KW_SE  shift 62
	KW_SENAUM  shift 63
	KW_ENQUANTO  shift 45
	.  error


state 32
	expr : KW_ENTRADA .  (46)

	.  reduce 46


state 33
	expr : TK_IDENTIFIER .  (26)
	expr : TK_IDENTIFIER . '[' expr ']'  (27)
	expr : TK_IDENTIFIER . '(' array ')'  (28)

	'('  shift 64
	'['  shift 65
	KW_SE  reduce 26
	KW_SENAUM  reduce 26
	KW_ENQUANTO  reduce 26
	KW_ENTRADA  reduce 26
	OPERATOR_LE  reduce 26
	OPERATOR_GE  reduce 26
	OPERATOR_EQ  reduce 26
	OPERATOR_DIF  reduce 26
	TK_IDENTIFIER  reduce 26
	LIT_INTEIRO  reduce 26
	LIT_FLOAT  reduce 26
	LIT_CHAR  reduce 26
	LIT_STRING  reduce 26
	'-'  reduce 26
	'+'  reduce 26
	'/'  reduce 26
	'*'  reduce 26
	'>'  reduce 26
	'<'  reduce 26
	'&'  reduce 26
	'|'  reduce 26
	'~'  reduce 26
	';'  reduce 26
	']'  reduce 26
	')'  reduce 26
	'}'  reduce 26


state 34
	expr : LIT_INTEIRO .  (30)

	.  reduce 30


state 35
	expr : LIT_FLOAT .  (31)

	.  reduce 31


state 36
	expr : LIT_CHAR .  (29)

	.  reduce 29


state 37
	arrayPrint : LIT_STRING . arrayPrint  (56)
	arrayPrint : .  (58)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	LIT_STRING  shift 37
	'('  shift 38
	KW_SE  reduce 58
	KW_SENAUM  reduce 58
	KW_ENQUANTO  reduce 58
	';'  reduce 58
	'}'  reduce 58

	expr  goto 39
	arrayPrint  goto 66


state 38
	expr : '(' . expr ')'  (45)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 67


state 39
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)
	arrayPrint : expr . arrayPrint  (57)
	arrayPrint : .  (58)

	KW_ENTRADA  shift 32
	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	LIT_STRING  shift 37
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	'('  shift 38
	KW_SE  reduce 58
	KW_SENAUM  reduce 58
	KW_ENQUANTO  reduce 58
	';'  reduce 58
	'}'  reduce 58

	expr  goto 39
	arrayPrint  goto 81


state 40
	cmd : KW_ESCREVA arrayPrint .  (22)

	.  reduce 22


state 41
	cmd : KW_RETORNE expr .  (23)
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)

	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	KW_SE  reduce 23
	KW_SENAUM  reduce 23
	KW_ENQUANTO  reduce 23
	';'  reduce 23
	'}'  reduce 23


state 42
	cmd : TK_IDENTIFIER '=' . expr  (17)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 82


state 43
	cmd : TK_IDENTIFIER '[' . expr ']' '=' expr  (18)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 83


state 44
	block : '{' listCmd '}' .  (59)

	.  reduce 59


state 45
	cmd : cmd KW_ENQUANTO . '(' expr ')'  (19)

	'('  shift 84
	.  error


state 46
	listCmd : cmd ';' . listCmd  (4)
	cmd : .  (25)

	KW_ENTAUM  shift 13
	KW_ESCREVA  shift 14
	KW_RETORNE  shift 15
	TK_IDENTIFIER  shift 16
	'{'  shift 4
	KW_ENQUANTO  reduce 25
	';'  reduce 25
	'}'  reduce 25

	block  goto 17
	listCmd  goto 85
	cmd  goto 19


state 47
	param : KW_CARA . TK_IDENTIFIER  (51)

	TK_IDENTIFIER  shift 86
	.  error


state 48
	param : KW_INTE . TK_IDENTIFIER  (52)

	TK_IDENTIFIER  shift 87
	.  error


state 49
	param : KW_REAL . TK_IDENTIFIER  (53)

	TK_IDENTIFIER  shift 88
	.  error


state 50
	function : KW_CARA TK_IDENTIFIER '(' arrayParams . ')' block  (14)

	')'  shift 89
	.  error


state 51
	arrayParams : param . arrayParams  (54)
	arrayParams : .  (55)

	KW_CARA  shift 47
	KW_INTE  shift 48
	KW_REAL  shift 49
	')'  reduce 55

	arrayParams  goto 90
	param  goto 51


state 52
	var : KW_CARA TK_IDENTIFIER '=' expr . ';'  (8)
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)

	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	';'  shift 91
	.  error


state 53
	index : TK_IDENTIFIER .  (48)

	.  reduce 48


state 54
	index : LIT_INTEIRO .  (47)

	.  reduce 47


state 55
	var : KW_CARA TK_IDENTIFIER '[' index . ']' array ';'  (12)

	']'  shift 92
	.  error


state 56
	function : KW_INTE TK_IDENTIFIER '(' arrayParams . ')' block  (15)

	')'  shift 93
	.  error


state 57
	var : KW_INTE TK_IDENTIFIER '=' expr . ';'  (9)
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)

	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	';'  shift 94
	.  error


state 58
	var : KW_INTE TK_IDENTIFIER '[' index . ']' array ';'  (11)

	']'  shift 95
	.  error


state 59
	function : KW_REAL TK_IDENTIFIER '(' arrayParams . ')' block  (16)

	')'  shift 96
	.  error


state 60
	var : KW_REAL TK_IDENTIFIER '=' expr . ';'  (10)
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)

	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	';'  shift 97
	.  error


state 61
	var : KW_REAL TK_IDENTIFIER '[' index . ']' array ';'  (13)

	']'  shift 98
	.  error


state 62
	cmd : KW_ENTAUM cmd KW_SE . '(' expr ')'  (20)

	'('  shift 99
	.  error


state 63
	cmd : KW_ENTAUM cmd KW_SENAUM . cmd KW_SE '(' expr ')'  (21)
	cmd : .  (25)

	KW_ENTAUM  shift 13
	KW_ESCREVA  shift 14
	KW_RETORNE  shift 15
	TK_IDENTIFIER  shift 16
	'{'  shift 4
	KW_SE  reduce 25
	KW_ENQUANTO  reduce 25

	block  goto 17
	cmd  goto 100


state 64
	expr : TK_IDENTIFIER '(' . array ')'  (28)
	array : .  (50)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	')'  reduce 50

	expr  goto 101
	array  goto 102


state 65
	expr : TK_IDENTIFIER '[' . expr ']'  (27)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 103


state 66
	arrayPrint : LIT_STRING arrayPrint .  (56)

	.  reduce 56


state 67
	expr : expr . '+' expr  (32)
	expr : expr . '-' expr  (33)
	expr : expr . '*' expr  (34)
	expr : expr . '/' expr  (35)
	expr : expr . '<' expr  (36)
	expr : expr . '>' expr  (37)
	expr : expr . OPERATOR_EQ expr  (38)
	expr : expr . OPERATOR_DIF expr  (39)
	expr : expr . OPERATOR_GE expr  (40)
	expr : expr . OPERATOR_LE expr  (41)
	expr : expr . '&' expr  (42)
	expr : expr . '|' expr  (43)
	expr : expr . '~' expr  (44)
	expr : '(' expr . ')'  (45)

	OPERATOR_LE  shift 68
	OPERATOR_GE  shift 69
	OPERATOR_EQ  shift 70
	OPERATOR_DIF  shift 71
	'-'  shift 72
	'+'  shift 73
	'/'  shift 74
	'*'  shift 75
	'>'  shift 76
	'<'  shift 77
	'&'  shift 78
	'|'  shift 79
	'~'  shift 80
	')'  shift 104
	.  error


state 68
	expr : expr OPERATOR_LE . expr  (41)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 105


state 69
	expr : expr OPERATOR_GE . expr  (40)

	KW_ENTRADA  shift 32
	TK_IDENTIFIER  shift 33
	LIT_INTEIRO  shift 34
	LIT_FLOAT  shift 35
	LIT_CHAR  shift 36
	'('  shift 38
	.  error

	expr  goto 106


state 70
	expr : expr OPERATOR_EQ . expr  (38)
